--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.21",
     "lucide-react": "^0.525.0",
     "next": "15.1.8",
     "react": "^19.0.0",
